--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@fablevision/word-timings",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "",
   "main": "index.js",
   "engines": {
     "node": ">=12"
   },
   "bin": {
-    "word-timings": "./dist/word-timings.js"
+    "word-timings": "./dist/index.js"
   },
   "files": [
     "dist/"
