--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
     "dist/"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "node ./dist/index.js -c ./test/test.json5"
   },
   "author": "Andrew Start",
   "license": "MIT",
   "dependencies": {
     "commander": "^9.0.0",
     "fast-glob": "^3.2.11",
+    "ffmpeg-cli": "^2.7.5",
     "fs-extra": "^10.0.0",
     "hasha": "^5.2.2",
     "json5": "^2.2.0",
-    "vosk": "^0.3.32",
-    "wav": "^1.0.2"
+    "vosk": "^0.3.32"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^16.0.0",
-    "@types/wav": "^1.0.1",
     "typescript": "^4.5.5"
   }
 }
